internal/xds/translator/testdata/out/xds-ir/securitypolicy-with-oidc-jwt-authz.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: httproute/default/httproute-1/rule/0/match/0/www_example_com
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            - email
            - profile
            authType: BASIC_AUTH
            authorizationEndpoint: https://oidc.example.com/authorize
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /oauth2/callback
              oauthNonceCookieConfig:
                path: /oauth2/callback
            credentials:
              clientId: prometheus
              cookieNames:
                bearerToken: AccessToken-5f93c2e4
                codeVerifier: CodeVerifier-5f93c2e4
                idToken: IdToken
                oauthExpires: OauthExpires-5f93c2e4
                oauthHmac: OauthHMAC-5f93c2e4
                oauthNonce: OauthNonce-5f93c2e4
                refreshToken: RefreshToken-5f93c2e4
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-http-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-http-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            preserveAuthorizationHeader: true
            redirectPathMatcher:
              path:
                exact: /oauth2/callback
            redirectUri: '%REQ(x-forwarded-proto)%://%REQ(:authority)%/oauth2/callback'
            signoutPath:
              path:
                exact: /logout
            statPrefix: securitypolicy/default/policy-for-http-route
            tokenEndpoint:
              cluster: oidc_example_com_443
              timeout: 10s
              uri: https://oidc.example.com/oauth/token
            useRefreshToken: true
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    singlePredicate:
                      customMatch:
                        name: claim_matcher
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.metadata.v3.Metadata
                          value:
                            listMatch:
                              oneOf:
                                stringMatch:
                                  exact: foobar
                      input:
                        name: claim
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DynamicMetadataInput
                          filter: envoy.filters.http.jwt_authn
                          path:
                          - key: exjwt
                          - key: groups
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
